echo-frontend/templates/echo-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-frontend
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /blue/
        pathType: Prefix
        backend:
          service:
            name: echo-frontend-blue
            port:
              number: 80
      - path: /green/
        pathType: Prefix
        backend:
          service:
            name: echo-frontend-green
            port:
              number: 80
